2011-02-28	The InnoDB Team

	* btr/btr0sea.c, buf/buf0buf.c, buf/buf0lru.c:
	Fix Bug#58549 Race condition in buf_LRU_drop_page_hash_for_tablespace()
	and compressed tables

2011-02-15	The InnoDB Team

	* sync/sync0rw.c, innodb_bug59307.test:
	Bug#59307 Valgrind: uninitialized value in
	rw_lock_set_writer_id_and_recursion_flag()

2011-02-14	The InnoDB Team

	* handler/handler0alter.cc:
	Bug#59749 Enabling concurrent reads while creating non-primary
	unique index gives failures

2011-01-31	The InnoDB Team

	* btr/btr0cur.c, include/row0upd.h,
	row/row0purge.c, row/row0umod.c, row/row0upd.c:
	Bug#59230 assert 0 row_upd_changes_ord_field_binary()
	in post-crash rollback or purge

2011-01-27	The InnoDB Team

	* btr/btr0cur.c:
	Bug#59465 btr_estimate_number_of_different_key_vals use
	incorrect offset for external_size

2011-01-27	The InnoDB Team

	* include/trx0trx.h, trx/trx0trx.c:
	Bug#59440 Race condition in XA ROLLBACK and XA COMMIT
	after server restart

2011-01-25	The InnoDB Team

	* row/row0upd.c:
	Bug#59585 Fix 58912 introduces compiler warning
	due to potentially uninitialized variable

2011-01-25	The InnoDB Team

	* mtr/mtr0log.c:
	Bug#59486 Incorrect usage of UNIV_UNLIKELY() in mlog_parse_string()

2011-01-25	The InnoDB Team

	* row/row0vers.c:
	Fix Bug#59464 Race condition in row_vers_build_for_semi_consistent_read

2011-01-25	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, btr/btr0sea.c,
	buf/buf0buddy.c, buf/buf0buf.c, buf/buf0lru.c,
	include/buf0buf.h, include/buf0buf.ic, include/buf0lru.h,
	mem/mem0mem.c, page/page0zip.c:
	Fix Bug#59707 Unused compression-related parameters
	in buffer pool functions

2011-01-18	The InnoDB Team

	* include/sync0rw.h, sync/sync0arr.c, sync/sync0rw.c:
	Fix Bug#59579 rw_lock_debug_print outputs to stderr, not to
	SHOW ENGINE INNODB STATUS

2011-01-14	The InnoDB Team
	* btr/btr0cur.c, dict/dict0dict.c, handler/ha_innodb.cc,
	include/btr0cur.h, include/dict0mem.h, include/rem0cmp.h,